# app/Http/Controllers/API/ManufacturingModelController.php
@@ -1,0 +1,80 @@
+<?php
+
+namespace App\Http\Controllers\API;
+
+use Illuminate\Http\Request;
+use App\Http\Controllers\Controller;
+
+use App\ManufacturingModel;
+
+class ManufacturingModelController extends Controller
+{
+    /**
+     * Display a listing of the resource.
+     *
+     * @return \Illuminate\Http\Response
+     */
+    public function index()
+    {
+        $user = ManufacturingModel::find(1);
+
+        foreach ($user->produits as $role) {
+            echo $role->reference;
+        } 
+    }
+
+    /**
+     * Store a newly created resource in storage.
+     *
+     * @param  \Illuminate\Http\Request  $request
+     * @return \Illuminate\Http\Response
+     */
+    public function store(Request $request)
+    {
+        // Creating a record in a different way
+        $model = ManufacturingModel::create([
+            'color' => $request->color,
+            'description' => $request->description,
+            'name' => $request->name,
+            'picture' => $request->picture,
+            'reference' => $request->reference,
+        ]);
+        //$model = ManufacturingModel::create($request->all()); 
+        return $request->all();
+        //return new ClientResource($createClient);
+    }
+
+    /**
+     * Display the specified resource.
+     *
+     * @param  int  $id
+     * @return \Illuminate\Http\Response
+     */
+    public function show($id)
+    {
+        //
+    }
+
+    /**
+     * Update the specified resource in storage.
+     *
+     * @param  \Illuminate\Http\Request  $request
+     * @param  int  $id
+     * @return \Illuminate\Http\Response
+     */
+    public function update(Request $request, $id)
+    {
+        //
+    }
+
+    /**
+     * Remove the specified resource from storage.
+     *
+     * @param  int  $id
+     * @return \Illuminate\Http\Response
+     */
+    public function destroy($id)
+    {
+        //
+    }
+}
